--- a/trip.html
+++ b/trip.html
@@ -60,6 +60,11 @@
     <label for="duration">Dauer der Reise in Tagen (1-21):</label>
     <input type="number" id="duration" name="duration" min="1" max="21" required><br><br>
   </fieldset>
+  <fieldset>
+    <legend>Anzahl Personen</legend>
+    <label for="anzPerson">Anzahl Reisende Personen</label>
+    <input type="number" id="anzPerson" name="anzPerson">
+  </fieldset>
 </form>
 </body>
 </html>
