--- a/trip.html
+++ b/trip.html
@@ -70,7 +70,7 @@
     <input type="number" id="anzPerson" name="anzPerson">
   </fieldset>
   <fieldset>
-    <legend>Gluggesellschaft:</legend>
+    <legend>Fluggesellschaft:</legend>
     <label for="fluglinie">Wählen Sie Ihre bevorzugte Fluggesellschaft:</label>
     <select id="fluglinie" name="fluglinie">
       <option value="">Bitte auswählen</option>
@@ -80,6 +80,18 @@
       <option value="air-france">Air France</option>
       <option value="singapore-airlines">Singapore Airlines</option>
     </select>
+  </fieldset>
+
+  <fieldset>
+    <legend>Optionale Dienstleistungen</legend>
+    <input type="checkbox" id="priority-checkin" name="priority-checkin">
+    <label for="priority-checkin">Priority-Check-In</label><br>
+
+    <input type="checkbox" id="zusatz-handgepaeck" name="zusatz-handgepaeck">
+    <label for="zusatz-handgepaeck">Zusätzliches Handgepäck</label><br>
+
+    <input type="checkbox" id="mietwagen-buchung" name="mietwagen-buchung">
+    <label for="mietwagen-buchung">Mietwagen buchen</label><br>
   </fieldset>
 </form>
 </body>
