--- a/trip.html
+++ b/trip.html
@@ -107,7 +107,12 @@
       <option value="Tokio">
       <option value="Schweiz">
     </datalist>
+  </fieldset>
 
+  <fieldset>
+    <legend>E-Mail</legend>
+    <label for="email">Ihre E-Mail-Adresse:</label>
+    <input type="email" id="email" name="email" placeholder="name@example.com" required>
   </fieldset>
 </form>
 </body>
