--- a/trip.html
+++ b/trip.html
@@ -114,6 +114,9 @@
     <label for="email">Ihre E-Mail-Adresse:</label>
     <input type="email" id="email" name="email" placeholder="name@example.com" required>
   </fieldset>
+<br><br>
+  <button type="reset">Reset</button>
+  <button type="submit">Submit</button>
 </form>
 </body>
 </html>
