--- a/trip.html
+++ b/trip.html
@@ -15,12 +15,12 @@
     <input list="reiseziele" id="reiseziel" name="reiseziel" placeholder="Wählen Sie ein Reiseziel oder geben Sie Ihren eigenen Zielort ein" required>
 
     <datalist id="reiseziele">
-      <option value="Paris">
-      <option value="London">
-      <option value="New York">
-      <option value="Rom">
-      <option value="Tokio">
-      <option value="Schweiz">
+      <option value="Paris"></option>
+      <option value="London"></option>
+      <option value="New York"></option>
+      <option value="Rom"></option>
+      <option value="Tokio"></option>
+      <option value="Schweiz"></option>
     </datalist>
   </fieldset>
 
